<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LifeAssistant</string>
    <string name="common_error">加载失败</string>
    <string name="network_exception">网络异常</string>
    <string name="no_result_tips">没有搜索到结果</string>
	
    <!-- 主界面 -->
    <string name="news_center_title">新闻中心</string>
    <string name="music_title">音乐</string>
    <string name="map_title">地图</string>
    <string name="weather_title">天气</string>
    <string name="record_title">画图</string>
    <string name="message_center_title">消息中心</string>
    
    <!-- 音乐界面 -->
    <string name="local_music_list">本地音乐列表</string>
    <string name="net_music_list">网络音乐列表</string>
    <string name="local_music_text">本地音乐</string>
    <string name="net_music_text">网络音乐</string>
    
    <!-- 地图模块 -->
    <string name="map_location_title">地图定位</string>
    <string name="hint_text_address_name">请输入地名</string>
    <string name="search_text">搜索</string>
    <string name="msg_list">消息列表</string>
    
    <!-- 新闻中心 -->
</resources>
