<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/main_gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:background="@color/main_green" >

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingLeft="@dimen/dp10"
            android:paddingRight="@dimen/dp10"
            android:text="&lt;"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp25" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/map_location_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp20" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp5"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp10"
        android:paddingLeft="@dimen/dp15"
        android:paddingRight="@dimen/dp15"
        android:paddingTop="@dimen/dp10" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/pop_shape"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dp10"
            android:paddingTop="@dimen/dp10" >

            <ImageView
                android:layout_width="@dimen/dp25"
                android:layout_height="@dimen/dp25"
                android:scaleType="centerInside"
                android:src="@drawable/ic_launcher"/>

            <EditText
                android:id="@+id/et_content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_text_address_name"
                android:maxLength="20"
                android:singleLine="true"
                android:textColor="@color/darkgray"
                android:textColorHint="@color/lightgray"
                android:textSize="@dimen/sp15" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp15"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:text="@string/search_text"
            android:textColor="@color/darkgray" />
    </LinearLayout>
    
    <com.baidu.mapapi.map.MapView
        android:id="@+id/bmapView"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp200"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true" 
        android:layout_marginTop="@dimen/dp10"/>
</LinearLayout>